--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- <h2>"IMAGENES CARRUCEL"</h2> -->
 
         
-            <section class="carrusel_container">
+            <!-- <section class="carrusel_container">
                 <section class="carrusel">
                     <section class="Slide">
                         <img src="./assets/Combos/combo_yogo_yogo.png" alt="combo_yogo_yogo">
@@ -145,7 +145,7 @@
                     </section>
                         
                 </section>
-            </section>
+            </section> -->
 
         <img src="./assets/image_discount.png" alt="image_discount" id="image_discount">
 
